just for debug statistics